# MusicStreamX

./: .env.example  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml  deploy-staging.yml  docker-build.yml
backend/api-gateway/: Dockerfile  jest.config.js  package.json  tsconfig.json
backend/api-gateway/src/: index.ts
backend/api-gateway/src/__tests__/: analytics.test.ts  cache.test.ts  music-upload.test.ts  nft.test.ts
backend/api-gateway/src/config/: database.ts  redis.ts
backend/api-gateway/src/middleware/: errorHandler.ts  validate.ts  validateTrackMetadata.ts
backend/api-gateway/src/routes/: artists.ts  fans.ts  governance.ts  live-events.ts  music.ts  nft.ts  streaming.ts
backend/api-gateway/src/services/: cacheService.ts  ipfsService.ts  socketService.ts
contracts/: Cargo.toml
contracts/shared/: Cargo.toml
contracts/shared/src/: errors.rs  events.rs  lib.rs  types.rs
frontend/artist-dashboard/: Dockerfile  index.html  package.json  vite.config.ts
frontend/artist-dashboard/src/: App.tsx
frontend/artist-dashboard/src/__tests__/: RoyaltyAnalyticsDashboard.test.tsx  TrackUpload.test.tsx
frontend/artist-dashboard/src/api/: analyticsApi.ts
frontend/artist-dashboard/src/components/: BarChart.tsx  GeoTable.tsx  LineChart.tsx  TrackUpload.tsx
frontend/artist-dashboard/src/pages/: RoyaltyAnalyticsDashboard.tsx
frontend/music-player/: package.json  vite.config.ts
frontend/music-player/src/: App.tsx
frontend/nft-marketplace/: index.html  package.json  vite.config.ts
frontend/nft-marketplace/src/: App.tsx
(+23 files in other folders)
